--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -27,6 +27,7 @@
 1.16 Write-Ahead Logging (WAL)
 1.17 Снапшоты и восстановление
 1.18 Горячие/холодные данные
+1.19 Жизненный цикл страниц и отслеживание модификаций (Page Lifecycle, Dirty Bits, LRU/ARC)
 
 ## 🆔 Идентификатор блока
 
