--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -1,4 +1,4 @@
-Он содержит **все 19 разделов**, включая:
+# В Пакете 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
 
 * 📐 UML-диаграмму
 * 🧾 Бизнес-функции
@@ -6,8 +6,6 @@
 * 📝 Реальные сообщения логирования
 * 🔧 Реальные C-функции и прототипы
 * 🧪 Покрытие тестами
-
-В Пакете 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
 
 1.1 In-Memory выполнение   
 1.2 Tiered Storage (NVMe/SSD fallback)   
