--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -1,5 +1,4 @@
-# В Пакете 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
-
+# Пакете 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
 
 * 📐 UML-диаграмму
 * 🧾 Бизнес-функции
