--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -1,4 +1,4 @@
-# Пакете 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
+# Пакет 1. Архитектура и Хранилище всего предусмотрено 19 блоков:
 
 * 📐 UML-диаграмму
 * 🧾 Бизнес-функции
