--- a/Documentation/0x02.md
+++ b/Documentation/0x02.md
@@ -1,4 +1,17 @@
-# Пакет 2. Транзакционность и надёжность
+# 📦 Пакет 2 — Транзакционность и надёжность
+
+| № блока | Название блока                                                                 |
+| ------- | ------------------------------------------------------------------------------ |
+| 2.1     | MVCC (Compressed Chains + Snapshot Isolation)                                  |
+| 2.2     | Уровни изоляции транзакций (RC, RR, SI, SERIALIZABLE)                          |
+| 2.3     | Журналирование WAL (Write-Ahead Logging)                                       |
+| 2.4     | Снимки и восстановление (Snapshots + Recovery)                                 |
+| 2.5     | Управление транзакциями (Transaction Manager)                                  |
+| 2.6     | Active-Active / Active-Passive репликация                                      |
+| 2.7     | Консенсусный протокол (Raft/Paxos)                                             |
+| 2.8     | Watchdog и Failover                                                            |
+| 2.9     | Фоновая сборка мусора (Garbage Collector, Vacuum)                              |
+| 2.10    | Тестирование надёжности (crash recovery, fault injection, стресс и soak-тесты) |
 
 
 ---
