--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -7,6 +7,8 @@
 * 🔧 Реальные C-функции и прототипы
 * 🧪 Покрытие тестами
 
+| № блока | Название блока                                                                 |
+| ------- | ------------------------------------------------------------------------------ |
 **1.1 In-Memory выполнение**   
 **1.2 Tiered Storage (NVMe/SSD fallback)**   
 **1.3 Row-store**   
