--- a/Documentation/0x01.md
+++ b/Documentation/0x01.md
@@ -29,10 +29,9 @@
 * 🔧 Реальные C-функции и прототипы
 * 🧪 Покрытие тестами
 
+## 1.1 Инициализация конфигурации (config\_init)
+
 ## 🆔 Идентификатор блока
-
-**1.1 Инициализация конфигурации (config\_init)**
-
 ---
 
 ## 🎯 Назначение
