--- a/Documentation/0x03.md
+++ b/Documentation/0x03.md
@@ -1,3 +1,14 @@
+| № блока | Название блока                                           |
+| ------: | -------------------------------------------------------- |
+|     3.1 | SQL Ядро и Парсер ANSI:2011+                             |
+|     3.2 | SQL-оптимизатор                                          |
+|     3.3 | Расширения SQL: JSON, FILTER, агрегаты, MATCH\_RECOGNIZE |
+|     3.4 | Собственный DSL для транзакций                           |
+|     3.5 | Поддержка UDF/UDAF: Lua, WASM, JS, C/C++                 |
+|     3.6 | Язык процедур и триггеров (PL/SQL-подобный)              |
+|     3.7 | Встроенные процедуры: окна, прогноз, кластеризация       |
+
+
 # 3.1 — SQL Ядро и Парсер ANSI:2011+
 
 ## 🆔 Идентификатор блока
@@ -151,8 +162,6 @@ package "3.1 SQL Ядро и Парсер" {
 * Расширение генерации IR для кодогенерации и оптимизации
 
 ---
-
-Готов перейти к **блоку 3.2 — Оптимизаторы запросов** — напиши «да» для продолжения.
 
 # 3.2 — SQL-оптимизатор
 
